--- a/.htaccess
+++ b/.htaccess
@@ -1,2 +1,7 @@
 php_value display_errors 0
 php_flag display_errors off
+
+RewriteEngine on
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ /index.php
